<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- SYSTEM -->
	<string name="app_name">Moveo</string>
    <string name="action_settings">Settings</string>

    <!-- GENERAL -->
    <string name="cancel">Annuler</string>
    <string name="description">Description</string>
    <string name="country">Pays</string>
    <string name="city">Nom</string>
    <string name="add_trip">Ajouter un voyage</string>
    <string name="save">Enregistrer</string>
    <string name="delete_account">Supprimer mon compte</string>

    <!-- REGISTER -->
    <string name="register_button">Créer un compte</string>
    <string name="register_text_mail">Email</string>
    <string name="register_text_password">Mot de passe</string>
    <string name="register_text_first_name">Prénom</string>
    <string name="register_text_last_name">Nom</string>

    <!-- LOGIN -->
    <string name="login_text_email">Email</string>
    <string name="login_text_password">Mot de passe</string>
    <string name="not_register">Pas encore inscrit ?</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="logo_description">Logo</string>
    <string name="submit_login">Se connecter</string>

    <!-- TRIP -->
    <string name="trip_name">Nom du voyage</string>
    <string name="username">Username</string>
    <string name="picture">TripPicture</string>
    <string name="trip_created_at">Voyage créé le</string>

    <!-- ADD PLACE -->
    <string name="city_name">City Name</string>
    <string name="country_name">Country Name</string>
    <string name="place_name">Place Name</string>
    <string name="address_place">Adresse</string>
    <string name="text_place">Texte</string>
    <string name="place_description">Description du lieu</string>
    <string name="shopping">Shopping</string>
    <string name="place">Lieu</string>
    <string name="address">Adresse</string>
    <string name="created_by">Voyage créé par</string>

    <!-- PLACES LIST -->
    <string name="place_address">Address</string>
    <string name="view_place">Voir le lieu</string>

    <!-- FRIENDS LIST -->
    <string name="friends_title">Mes amis</string>
    <string name="contact_number">5 contacts</string>
    <string name="friend_name">Username</string>
    <string name="accept_friend">Accept</string>
    <string name="refuse_friend">Refuse</string>
    <string name="delete_friend">Delete</string>

    <!-- EXPLORER -->
    <string name="bulle_discussion">Discussion</string>
    <string name="nb_picture">Photos</string>
    <string name="comments_number">12</string>

    <!-- MY ACCOUNT -->
    <string name="my_account">Mon compte</string>
    <string name="thumbnail">Ma photo</string>
    <string name="modify_thumbnail">Modifier</string>
    <string name="name_settings">Nom</string>
    <string name="firstname_settings">Prénom</string>
    <string name="email_settings">Email</string>
    <string name="birthday_settings">Date de naissance</string>
    <string name="city_settings">Ville actuelle</string>
    <string name="country_settings">Pays actuel</string>
    <string name="add_link">Ajouter un lien</string>
    <string name="modify_settings">Modifier</string>

    <!-- ACTIONBAR -->
    <string name="action_search">Rechercher</string>
    <string name="action_slide">Menu</string>
    <string name="login_text_button">Se connecter</string>
    <string name="action_logout">Déconnexion</string>

    <!-- ADD TRIP -->
    <string name="add_place_title">Explorer</string>
    <string name="add_place">Ajouter un lieu</string>
    <string name="browse">Parcourir</string>
    <string name="cover">Photo principale</string>
    <string name="text_link_login">Déjà un compte ?</string>

    <!-- MY TRIP -->
    <string name="my_trip_title">Mon voyage</string>
    <string name="delete_trip">Supprimer le voyage</string>
    <string name="delete_trip_icon">Icône suppression</string>
    <string name="my_trip_city_title">City And Country</string>
    <string name="add_trip_date">Voyage ajouté le</string>
    <string name="cover_title">Image de couverture</string>
    <string name="modify">Modifier</string>
    <string name="description_title">Description</string>
    <string name="trip_description">Description du voyage</string>
    <string name="categories_title">Catégories</string>
    <string name="last_comments">Derniers commentaires</string>
    <string name="fooding_icon">Fooding</string>
    <string name="hobbies_icon">Hobbies</string>
    <string name="shopping_icon">Shopping</string>
    <string name="pictures_icon">Pictures</string>

    <!-- COMMENTS -->
    <string name="username_comment">Username</string>
    <string name="modify_comment">Modifier</string>
    <string name="time_comment">Il y a</string>
    <string name="comment_content">Commentaire</string>

    <!-- MESSAGES -->
    <string name="date_message">Date</string>
    <string name="message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu neque varius, consectetur lectus ac, vestibulum arcu. Suspendisse a vulputate quam. Phasellus quis urna felis. Etiam sodales dolor mauris. Suspendisse feugiat interdum odio, quis laoreet nunc feugiat ullamcorper.</string>
    <string name="receive_messages">Messages reçus</string>
    <string name="send_messages">Messages envoyés</string>
    <string name="reply">Répondre</string>
    <string name="number_of_messages">2 messages</string>
    <string name="check_messages">Tout cocher</string>
    <string name="trash_messages">Supprimer</string>

    <!-- SETTINGS -->
    <string name="settings_title">Paramètres</string>
    <string name="my_password">Mon mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="check_new_password">Vérification du mot de passe</string>
    <string name="notifications">Afficher/cacher les indicateurs de notifications</string>
    <string name="informations">Rendre mes informations visibles par ce qui ne sont pas amis avec moi</string>
    <string name="validate">Valider</string>
    <string name="defaultindicator">nonindicator</string>
    <string name="indicator">indicator</string>

    <!-- Les éléments du menu -->
    <string-array name="nav_drawer_items">
        <item>Explorer</item>
        <item>Mes voyages</item>
        <item>Mon profil</item>
        <item>Mes amis</item>
        <item>Messagerie</item>
        <item>Paramètres</item>
        <item>À propos</item>
        <item>Déconnexion</item>
    </string-array>

    <!-- Les icônes des elements du menu -->
    <!-- Dans le même ordre que les elements du menu -->
    <array name="nav_drawer_icons">
        <item>@drawable/explore</item>
        <item>@drawable/mes_voyages</item>
        <item>@drawable/mon_profil</item>
        <item>@drawable/mes_amis</item>
        <item>@drawable/messagerie</item>
        <item>@drawable/parametres</item>
        <item>@drawable/informations</item>
        <item>@drawable/deconnexion</item>
    </array>

    <!-- POPUP LOST PASSWORD -->
    <string name="lost_password_label">MOT DE PASSE OUBLIÉ ?</string>
    <string name="lost_password_description">Entrez l\'adresse email liée à votre compte afin de récupérer un nouveau mot de passe</string>
    <string name="lost_password_hint_message">Entrez votre adresse mail</string>
    <string name="lost_password_send_email">ENVOYER</string>
    <string name="lost_password_cancel">ANNULER</string>
    <string name="lost_password_text">Entrez votre adresse mail liée à votre compte afin de récupérer votre mot de passe.</string>
    <string name="send_lost_password">Envoyer</string>

    <!-- SEND MESSAGE -->
    <string name="label_send_message">Vous allez envoyer un message à </string>
    <string name="send_message_button">ENVOYER</string>
    <string name="hint_message_editView">Votre message&#8230;</string>

    <!-- ABOUT -->
    <string name="developers_title">Développeurs :</string>
    <string name="developers_name">Alexandre, Sylvain, Amélie</string>
    <string name="version_title">Version :</string>
    <string name="version_number">1.0</string>

    <!-- USER PROFILE -->
    <string name="live_in">Habite à</string>
    <string name="trips_number">12 voyages</string>
    <string name="places_number">12 lieux</string>
    <string name="trips_user_title">Ses voyages :</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="user_icon">Image de profil</string>
    <string name="plane">Nombre de voyages</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Recherche…</string>
    <string name="friends_request_title">nouvelles demandes d\'amis</string>
    <string name="comment_button_text">Publier</string>
    <string name="comment_text">Votre commentaire</string>
    <string name="comment_hint">Saisir un commentaire...</string>
    <string name="birthday_button_description">date anniversaire</string>
    <string name="photo_publication_date">Publié le</string>
    <string name="photo_description">photo</string>
    <string name="content_description_trip_photo">Avatar</string>

    <!-- Custom Dialog -->
    <string name="ok_message">OK</string>

    <!-- Row Users -->
    <string name="user_trip_count">25</string>
    <string name="comment_description">commentaire</string>
    <string name="hint_description_trip">Votre description</string>
    <string name="text_my_comment">Votre Commentaire</string>
    <string name="delete">Supprimer</string>
    <string name="add_photo">Ajouter une photo</string>
    <string name="see">Voir</string>


</resources>