<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:id="@+id/my_trip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/my_trip_title"
            android:id="@+id/my_trip_title"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#3cb2cc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/my_trip_city_title"
            android:id="@+id/my_trip_city_title"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:text="@string/add_trip_date"
            android:id="@+id/add_trip_date" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete_trip"
                android:id="@+id/delete_app"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/delete_trip"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_marginLeft="5dp"
                android:textColor="#ff003c"
                android:textStyle="bold"
                android:id="@+id/delete_trip" />
        </LinearLayout>

        <!-- COVER -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cover_title"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/modify"
            android:id="@+id/modify_cover"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#767574" />

        <ImageView
            android:id="@+id/my_trip_cover"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/validate"
                android:id="@+id/validate_cover"
                android:textSize="13sp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <!-- DESCRIPTION -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description_title"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/trip_description"
            android:id="@+id/trip_description"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/modify"
            android:id="@+id/modify_description"
            android:layout_marginTop="5dp"
            android:textColor="#767574" />

        <!-- CATEGORIES -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/categories_title"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" />

        <!-- Categories Icons -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fooding_icon"
                android:layout_weight="1"
                android:id="@+id/fooding"
                android:src="@drawable/my_trip_category_fooding" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hobbies_icon"
                android:id="@+id/hobbies"
                android:layout_weight="1"
                android:src="@drawable/my_trip_category_hobby" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shopping_icon"
                android:id="@+id/shopping"
                android:layout_weight="1"
                android:src="@drawable/my_trip_category_shopping" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pictures_icon"
                android:id="@+id/pictures"
                android:layout_weight="1"
                android:src="@drawable/my_trip_category_gallery" />
        </LinearLayout>

        <!-- LAST COMMENTS -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/last_comments"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView" />

    </LinearLayout>


</ScrollView>