<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/comment_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/comment_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/add_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_button_text"/>
    </LinearLayout>


</LinearLayout>