<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_home"
        android:visibility="visible"
        android:layout_marginTop="39dp"
        android:baselineAligned="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/city_name"
            android:layout_marginBottom="5dp"
            android:id="@+id/trip_name"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/country_name"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            android:textSize="19sp"
            android:id="@+id/trip_country"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/username"
            android:textSize="19sp"
            android:textColor="#3cb2cc"
            android:layout_marginBottom="20dp"
            android:id="@+id/trip_author"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/trip_created_at"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/trip_date"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:text="@string/text_place"
            android:id="@+id/trip_description"
            android:textColor="#212121"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>