<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:id="@+id/add_place">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_trip"
            android:textColor="@color/title"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/add_trip_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/title_size"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/add_trip_title"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_centerHorizontal="true">

            <!-- CITY -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/city"
                android:textColor="#666"
                android:layout_marginBottom="5dp"
                android:textAllCaps="true"
                android:id="@+id/city" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="#ccc"
                android:id="@+id/editCity" />

            <!-- COUNTRY -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/country"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="#666"
                android:textAllCaps="true"
                android:id="@+id/country" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="#ccc"
                android:id="@+id/editCountry" />

            <!-- DESCRIPTION -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/description"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="#666"
                android:textAllCaps="true"
                android:id="@+id/descriptionTrip" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:background="#ccc"
                android:id="@+id/editDescriptionTrip" />

            <!-- ADD A COVER -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cover"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="#666"
                android:textAllCaps="true"
                android:id="@+id/add_cover" />

            <Button
                android:layout_width="103dp"
                android:layout_height="29dp"
                android:text="@string/browse"
                android:background="@drawable/submit_button"
                android:textColor="#fff"
                android:id="@+id/add_file"
                android:textSize="13sp"
                android:onClick="getfile" >
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/add_place"
                android:id="@+id/buttonAddPlace"
                android:textColor="#fff"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginTop="50dp"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_button_form"
                android:background="@drawable/submit_button"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cancel"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="50dp"
                android:textSize="13sp"
                android:id="@+id/cancelAddPlace"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>