<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#cfcfcf">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/friend_avatar"
                android:padding="10dp"
                android:src="@drawable/friend_avatar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/friend_name"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:layout_marginTop="25dp"
                android:id="@+id/friend_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/trash"
                android:contentDescription="@string/delete_friend"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="120dp"
                android:id="@+id/delete_friend" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/accept_friend"
                android:contentDescription="@string/accept_friend"
                android:layout_marginTop="20dp"
                android:id="@+id/accept_friend" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/refuse_friend"
                android:contentDescription="@string/refuse_friend"
                android:layout_marginTop="20dp"
                android:id="@+id/refuse_friend" />

        </LinearLayout>

</RelativeLayout>