<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/place_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:id="@+id/trip_place"
            android:background="@drawable/place_style"
            android:alpha="0.99"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/city_name"
                android:layout_marginTop="20dp"
                android:id="@+id/trip_place_city"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/country_name"
                android:layout_marginBottom="20dp"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:id="@+id/trip_place_country"
                android:layout_gravity="center_horizontal" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username"
                android:textSize="14sp"
                android:textColor="#3cb2cc"
                android:layout_marginBottom="20dp"
                android:id="@+id/trip_place_username"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/place_pictures_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/activities_icon"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:textColor="#212121"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/place_name"
                android:id="@+id/trip_place_title"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address_place"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="#212121"
                android:id="@+id/trip_place_adress"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:text="@string/text_place"
                android:id="@+id/trip_place_description"
                android:textColor="#212121"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

</ScrollView>